--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.0.4",
+    "@snowpack/plugin-sass": "^1.1.1",
     "@snowpack/plugin-svelte": "^3.3.0",
     "@snowpack/plugin-typescript": "^1.1.0",
     "@snowpack/web-test-runner-plugin": "^0.1.4",
@@ -17,6 +18,8 @@
     "@types/snowpack-env": "^2.3.2",
     "@web/test-runner": "^0.9.7",
     "chai": "^4.2.0",
+    "node-sass": "^5.0.0",
+    "sass": "^1.29.0",
     "snowpack": "^2.17.1",
     "svelte-preprocess": "^4.0.8",
     "typescript": "^4.0.0"
