--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
 	},
 	"dependencies": {
 		"@fortawesome/free-brands-svg-icons": "^5.15.1",
+		"@fortawesome/free-solid-svg-icons": "^5.15.1",
+		"@sveltejs/svelte-repl": "^0.2.1",
 		"TagCloud": "^2.1.0",
+		"codemirror": "^5.59.0",
+		"highlight.js": "^10.4.1",
 		"svelte": "^3.24.0",
 		"svelte-spa-router": "^3.0.5"
 	},
@@ -14,18 +18,15 @@
 		"@snowpack/plugin-dotenv": "^2.0.4",
 		"@snowpack/plugin-sass": "^1.1.1",
 		"@snowpack/plugin-svelte": "^3.3.0",
-		"@snowpack/plugin-typescript": "^1.1.0",
 		"@snowpack/web-test-runner-plugin": "^0.1.4",
 		"@testing-library/svelte": "^3.0.0",
-		"@types/chai": "^4.2.13",
-		"@types/snowpack-env": "^2.3.2",
 		"@web/test-runner": "^0.9.7",
 		"chai": "^4.2.0",
 		"fa-svelte": "^3.1.0",
 		"node-sass": "^5.0.0",
+		"rollup": "^2.35.1",
 		"sass": "^1.29.0",
 		"snowpack": "^2.17.1",
-		"svelte-preprocess": "^4.0.8",
-		"typescript": "^4.0.0"
+		"svelte-preprocess": "^4.0.8"
 	}
 }
