--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@fortawesome/free-brands-svg-icons": "^5.15.1",
 		"@fortawesome/free-solid-svg-icons": "^5.15.1",
 		"TagCloud": "^2.1.0",
+		"codemirror": "^5.59.0",
 		"svelte": "^3.24.0",
 		"svelte-spa-router": "^3.0.5"
 	},
